--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@
 			<div id="wrapper">
 			<!-- Header -->
 				<header id="header" class="alt">
-					<a href="../index.html" class="logo"><strong>Kasua</strong></a>
+					<a href="../" class="logo"><strong>Kasua</strong></a>
 					<nav>
 						<a href="#menu"></a>
 					</nav>
@@ -25,7 +25,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="../index.html">Home</a></li>
+							<li><a href="../about/">About Us</a></li>
 						</ul>
 					</nav>
 				<!-- Main -->
