--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Kasua</strong></a>
+						<a href="/" class="logo"><strong>Kasua</strong></a>
 						<nav>
 							<a href="#menu"></a>
 						</nav>
@@ -27,7 +27,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="about/index.html">About Us </a></li>
+							<li><a href="about/">About Us </a></li>
 						</ul>
 					</nav>
 
