--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Kasua</strong></a>
+						<a href="/" class="logo"><strong>Kasua</strong></a>
 						<nav>
 							<a href="#menu"></a>
 						</nav>
