Update form button and make email field required

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 									<div class="row uniform">
 										<div class="12u$">
 											<ul class="actions">
-												<li><input type="email" placeholder="What's your email?" id="email-address" name="email"></li>
-												<li><a href="#one" class="button next scrolly">Get Notified</a></li>
+												<li><input type="email" placeholder="What's your email?" id="email-address" name="email" required></li>
+												<li><button href="#one" class="button next scrolly">Get Notified</button></li>
 											</ul>
 								    </div>
 									</div>
